package fr.miage;

/**
 * Created by fodoucou on 08/11/2016.
 */
public class Message extends Composant {

    String contenu;
    public Message(String contenu){
        this.contenu=contenu;
    }

    public void add throw new inssuported operations exceptions{

    }
}
